--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+<div class="inputs">
+    <label for="file_after">After</label>
+    <input type="file" class="file_after" id="file_after" accept="image/*">
+    <label for="file_before">Before</label>
+    <input type="file" class="file_before" id="file_before" accept="image/*">   
+</div>
 
 <div id="slider" class="slider">Добавьте фото</div>
 
